# sql-hugo-lundberg-de24

./: .gitignore  README.md
02_setup_duckdb/: test_yt.duckdb
03_setup_dbeaver/: jokes.duckdb
03_setup_dbeaver/sql/: create_table.sql  delete.sql  insert_joke.sql  insert_jokes.sql  instert_jokes.sql  queries.sql  rename_col.sql  update_joke.sql
04_querying_data/data/: salaires.duckdb  weather.duckdb
04_querying_data/sql/: aggregate_function.sql  alias.sql  ingest_salaries.sql  query_salaries.sql  sorting.sql  weather.sql
05_filtering/data/: salaries.duckdb
05_filtering/sql/: case_when.sql  ingest.sql  logical_operators.sql  more_filters.sql  where_clause.sql
06_crud_operation/data/: glossary.duckdb
06_crud_operation/sql/: alter.sql  create.sql  delete.sql  drop.sql  read.sql  update.sql
07_generating_data/data/: synthetic_data.ddb
07_generating_data/sql/: code_along.sql  theory.sql
08_grouping_data/data/: seasonality.ddb
08_grouping_data/sql/: eda_exploratory_data_analysis.sql  group_by.sql  ingest_food_data.sql  transformations.sql
09_strings/data/: sql_terms.csv  strings.ddb
09_strings/sql/: clean.sql  filtering_transformation.sql  ingest.sql
10_set_operations/data/: synthetic.duckdb
10_set_operations/sql/: attach_sakila.sql  eda_sakila.sql  set_operations.sql  set_operations_sakila.sql  synthetic_data.sql
11_joins/data/: plants.ddb
11_joins/sql/: generate_data.sql  plants_join.sql  sakila_joins.sql
duckdbjupyter/: hello.ipynb  hello.py  pyproject.toml
duckdbjupyter/data/: hello.duckdb
exercises/exercise_0/data/: hemnet.duckdb  (+2 more)
(+18 files in other folders)
