[project]
name = "duckdbjupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb-engine>=0.13.5",
    "jupysql>=0.10.16",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "toml>=0.10.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
